# scanner_3d

./: .gitignore  .rsync-exclude  CI_README.md  CLAUDE.md  Connection.md  Convention_CPP.md  Makefile  README.md  forward.md  makefile  todo.txt
computer/: .coverage  README.md  (+5 more)
pico/motor/: .gitignore  CMakeLists.txt  Makefile
pico/motor/makefile_scripts/: test.sh
pico/motor/srcs/: main.cpp
pico/motor/srcs/0_orchestration/: Drivers.hpp  SelfTest.cpp  SelfTest.hpp  UseCases.hpp  config.hpp
pico/motor/srcs/1_domain/: JsonMessage.cpp  JsonMessage.hpp  System.cpp  System.hpp
pico/motor/srcs/1_domain/JsonMessage/: JsonMessage.cpp
pico/motor/srcs/1_domain/System/: System.cpp  System.hpp  commandInterpreted.cpp  commandReceived.cpp  resultCommand.cpp
pico/motor/srcs/2_usecases/ArmController_UC/: ArmController_UC.cpp  ArmController_UC.hpp  joinInitialPos.cpp  joinPos.cpp
pico/motor/srcs/2_usecases/CommandReceptorUC/: CommandReceptorUC.cpp  CommandReceptorUC.hpp  checkForNewMessage.cpp  interpreteMessage.cpp
pico/motor/srcs/2_usecases/ControllerDC/: ControllerDC.cpp  ControllerDC.hpp
pico/motor/srcs/2_usecases/ExecuteCommand_UC/: ExecuteCommand_UC.cpp  ExecuteCommand_UC.hpp  execute.cpp
pico/motor/srcs/2_usecases/HandController_UC/: HandController_UC.cpp  HandController_UC.hpp  joinInitialPos.cpp  joinPos.cpp
pico/motor/srcs/2_usecases/PlateController_UC/: PlateController_UC.cpp  PlateController_UC.hpp  joinInitialPos.cpp  rotateTo.cpp
pico/motor/srcs/2_usecases/SendToPi_UC/: SendToPi_UC.cpp  SendToPi_UC.hpp  sendInvalidCmd.cpp  sendResponse.cpp  sendState.cpp  sendTestHardwareResult.cpp
pico/motor/srcs/2_usecases/TestHardware_UC/: TestHardware_UC.cpp  TestHardware_UC.hpp  execute.cpp
pico/motor/srcs/2_usecases/VibrationMonitor_UC/: VibrationMonitor_UC.cpp  VibrationMonitor_UC.hpp  isStable.cpp
pico/motor/srcs/3_interface/: IAccelerometer.hpp  IMotorDC.hpp  IReceptor.hpp  ISender.hpp  IServoMotor.hpp  IStepperMotor.hpp
pico/motor/srcs/3_interface/JsonMessage/: JsonMessage.cpp  JsonMessage.hpp
pico/motor/srcs/4_drivers/Accelerometer_Driver/: Accelerometer_Driver.cpp  Accelerometer_Driver.hpp  readMagnitude.cpp
pico/motor/srcs/4_drivers/MotorDC_Driver/: MotorDC_Driver.cpp  MotorDC_Driver.hpp  MotorDC_Driver_hw.cpp  goInitialPos.cpp  goTo.cpp  selfTest.cpp  stop.cpp
pico/motor/srcs/4_drivers/ServoMotor_Driver/: ServoMotor_Driver.cpp  ServoMotor_Driver.hpp  goInitialPos.cpp  goTo.cpp  selfTest.cpp
pico/motor/srcs/4_drivers/StepperMotor_Driver/: StepperMotor_Driver.cpp  StepperMotor_Driver.hpp  goInitialPos.cpp  selfTest.cpp  stepForward.cpp
pico/motor/srcs/4_drivers/UartReceptor_Driver/: UartReceptor_Driver.cpp  UartReceptor_Driver.hpp  isMessageArrived.cpp
pico/motor/srcs/4_drivers/UartSender_Driver/: UartSender_Driver.cpp  UartSender_Driver.hpp  send.cpp
pico/motor/tools/: acs712_debug.cpp
(+595 files in other folders)
